# llama.cpp

./: CMakeLists.txt  cmake_history.txt  download.py  git_update_script.txt
ggml/: CMakeLists.txt
ggml/include/: ggml-npu.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-npu/: CMakeLists.txt  ggml-npu.cpp
src/: unicode.h
